test/files/neg/t7895.check
t7895.scala:4: error: not found: value Goop
    case Goop(a, b, c) => Tuple2(a, b)
         ^
one error found
